# updatenight-agent

./: .env.example  .gitignore  README.md  links.md  pyproject.toml  requirements.txt  test_report.md
content/: -2063281919962864105_content.txt  -2063281919962864105_info.txt  -5588112165478579043_content.txt  -5588112165478579043_info.txt
samples/: write-php-in-react.md  wtf-is-vibe-coding.md  you-can-now-play-doom-in-a-pdf.md
scripts/: clean.bat  clean.sh
src/: config.py  main.py
src/agents/: content_scraper.py  content_writer.py  discord_collector.py  link_collector.py
src/scripts/: categorize_links.py  process_text.py  process_url.py
src/utils/: ai_categorizer.py  link_categorizer.py  logging_config.py  model_provider.py
